<resources>
    <string name="app_name">PratomsApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="friends">Friends</string>
    <string name="logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nim">NIM</string>
    <string name="_10116323">10116323</string>
    <string name="kelas">Kelas</string>
    <string name="if_8">IF - 8</string>
    <string name="judul_tentang_saya">Tentang Saya</string>
    <string name="aria_pratomo">ARIA PRATOMO</string>
    <string name="telp">085779775997</string>
    <string name="email">ariapratomo@gmail.com</string>
    <string name="line">aripratom</string>
    <string name="wa">081320009730</string>
    <string name="twitter">aripratom</string>
    <string name="ig">aripratom</string>


    <string name="tentang_saya">Saya adalah mahasiswa yang kini sedang menjalani semester 6 di Universitas Komputer Indonesia, Bandung.
Dan saya sangat memiliki minat dalam dunia IT, saya kerap kali mempelajari hal-hal yang
berkaitan dengan membangun aplikasi berbasis android.
Selain itu, saya juga bergelut dalam bidang musik. Saya memiliki banyak pengalaman dalam mengisi acara
untuk bermain alat musik seperti gitar, bass, maupun drum.
Tidak hanya dalam bidang IT dan musik, olahraga juga merupakan hal yang saya minati disaat mengisi waktu senggang.
Sepak bola, berenang adalah cabang olahraga yang paling saya minati dari cabang olahraga lainnya.
Dalam hal sepak bola, saya sangat mengikuti setiap perkembangan PERSIB Bandung sejak duduk di bangku SD.</string>
    <string name="about_aplikasi">
        Aplikasi ini bernama PratomsApp karena sesuai dengan nama belakang dari pembuatnya yaitu Aria Pratomo.
        \nAplikasi ini dibuat pada tanggal 01 Agustus 2019 hingga  07 Agustus 2019.
        \nAplikasi ini memuat tentang data diri pemilik, dan informasi dari kontak kerabat terdekat untuk mempermudah komunikasi via smartphone.
        \nUntuk kedepannya aplikasi ini akan terus dikembangkan agar lebih baik dan berguna lagi bagi penggunanya.
    </string>
    <string name="tujuan">
        Aplikasi ini dibuat untuk memenuhi UAS Semester 6 Aplikasi Komputasi Bergerak.
    </string>
    <string name="nama">Nama</string>
    <string name="simpan">Simpan</string>
    <string name="teleponan">Telepon</string>
    <string name="tv_email">Email</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="delete">Delete</string>
    <string name="email_text">Email</string>
    <string name="telepon">Telepon</string>

</resources>
